<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="@dimen/_10sdp"
    >
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="@dimen/_5sdp"
        android:gravity="center_vertical"
       >

    <com.tatx.userapp.customviews.CustomTextView
        android:id="@+id/transefer_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/trno"
        android:gravity="left"
        android:layout_weight="1"
        android:textSize="@dimen/_15sdp"/>
    <com.tatx.userapp.customviews.CustomTextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sar"
        android:layout_marginRight="@dimen/_10sdp"
        android:gravity="right"
        android:layout_weight="1"
        android:textSize="@dimen/_15sdp"
      />
        <com.tatx.userapp.customviews.CustomTextView
            android:id="@+id/amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sarno"
            android:gravity="center"
            android:textColor="#49B84D"
            android:textSize="@dimen/_15sdp"
           />
    </LinearLayout>

    <com.tatx.userapp.customviews.CustomTextView
        android:id="@+id/bill_no"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/billno"
        android:gravity="center"
        android:layout_gravity="left"
        android:layout_marginLeft="@dimen/_5sdp"
        android:textSize="@dimen/_15sdp"
        android:layout_marginBottom="@dimen/_5sdp"
        />
    <com.tatx.userapp.customviews.CustomTextView
        android:id="@+id/date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/creditbaldate"
        android:gravity="left"
        android:textSize="@dimen/_15sdp"
       android:layout_margin="@dimen/_5sdp"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dip"
        android:background="@drawable/line"
        android:layout_marginTop="@dimen/_5sdp"
        />


</LinearLayout>
