<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <include layout="@layout/layout_title"/>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="start"
        android:orientation="vertical"
        android:layout_margin="@dimen/_20sdp">

        <com.tatx.userapp.customviews.CustomTextView
            style="@style/TextView12"
            android:text="@string/add_balance"
            android:textStyle="bold"
            />

        <LinearLayout
            android:id="@+id/sar_history"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:gravity="center"
            android:layout_marginTop="@dimen/_25sdp">

            <com.tatx.userapp.customviews.CustomTextView
                style="@style/TextView12"
                android:text="@string/sar"
                android:textStyle="bold"
                android:background="@drawable/circle_account_page"
                android:textColor="@color/button__text_color"
                />

            <View
                android:layout_width="0dp"
                android:layout_height="@dimen/_20sdp"
                android:layout_weight="1"
                android:background="@color/button_color"
                android:layout_marginLeft="@dimen/_minus10sdp"
                android:layout_marginRight="@dimen/_minus4sdp"
                />
            <com.tatx.userapp.customviews.CustomTextView
                android:id="@+id/tv_credit_balance"
                style="@style/TextView12"
                android:textStyle="bold"
                android:background="@drawable/circle_account_page"
                android:textColor="@color/button__text_color"
                />


        </LinearLayout>


        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_40sdp"
            android:gravity="center_horizontal"
            >


            <EditText
                android:id="@+id/et_amount_to_add"
                style="@style/RoundedCornerEditText"
                android:hint="@string/enter_amount_to_add"
                android:inputType="number"
                android:maxLength="6"
                />
        </LinearLayout>

        <com.tatx.userapp.customviews.CustomRippleView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_50sdp">

            <com.tatx.userapp.customviews.CustomButton
                android:id="@+id/tv_buy_credit_balance"
                style="@style/AppThemeButton"
                android:layout_gravity="center_horizontal"
                android:onClick="onClick"
                android:text="@string/buy"
                />
        </com.tatx.userapp.customviews.CustomRippleView>
    </LinearLayout>


</LinearLayout>
